--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,57 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    width: 100%;
-    height: 100%;
-    background-color: khaki;
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: rgb(143, 219, 141);
+    justify-content: center;
+    align-items: center;
 }
 
 .calculator {
-    width: 20%;
-    height: 20%;
-    background-color: hotpink;
-    border: 2px solid indigo;
+    /* display: flex; */
+    padding: 2%;
+    width: 40%;
+    height: 80%;
+    background-color: rgb(79, 82, 79);
+    border: 2px solid rgb(32, 32, 32);
+    border-radius: 5%;
+}
+
+.calculator input {
+    text-align: end;
+    background-color: rgb(215, 243, 220);
+    box-shadow: none;
+    padding: 20px;
+    font-size: 40px;
+    width: 100%;
+    border-bottom: 2px solid rgb(32, 32, 32);
+}
+
+.calculator-buttons {
+    height: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+}
+
+.calc-button {
+    background: rgba(0, 0, 0, 0.5); /* light background with opacity 50% */
+    border: 1px solid #111; /* black border */
+    padding: 20px;
+    color: #EEE; /* white text */
+    border-radius: 5px; /* rounded corners */
+    font-size: 22px; /* larger fonts */
+    cursor: pointer; /* make it look clickable */
+
+    /* background: rgb(235, 240, 235);
+    border: 2px solid rgb(32, 32, 32);
+    border-radius: 25%;
+    padding: 5%;
+    color: black; */
 }
