--- a/styles.css
+++ b/styles.css
@@ -3,33 +3,31 @@
 }
 
 body {
-    display: flex;
-    width: 100vw;
+    background: rgb(153, 196, 129);
     height: 100vh;
-    overflow: hidden;
-    background-color: rgb(143, 219, 141);
-    justify-content: center;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    /* padding-bottom: 30px;
+    padding-top: 30px; */
 }
 
 .calculator {
-    /* display: flex; */
-    padding: 2%;
-    width: 40%;
-    height: 80%;
-    background-color: rgb(79, 82, 79);
-    border: 2px solid rgb(32, 32, 32);
-    border-radius: 5%;
+    max-width: 600px;
+    background-color: grey;
+    margin: 0 auto;
+    border: 2px solid black;
+    border-radius: 25px;
 }
 
 .calculator input {
-    text-align: end;
-    background-color: rgb(215, 243, 220);
-    box-shadow: none;
-    padding: 20px;
-    font-size: 40px;
+    background: rgb(193, 224, 175);
+    border: 2px solid black;
     width: 100%;
-    border-bottom: 2px solid rgb(32, 32, 32);
+    border-radius: 25px;
+    padding: 20px;
+    text-align: right;
+    font-size: 80px;
 }
 
 .calculator-buttons {
@@ -38,20 +36,23 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, 1fr);
+    grid-gap: 20px;
 }
 
 .calc-button {
-    background: rgba(0, 0, 0, 0.5); /* light background with opacity 50% */
-    border: 1px solid #111; /* black border */
-    padding: 20px;
-    color: #EEE; /* white text */
-    border-radius: 5px; /* rounded corners */
-    font-size: 22px; /* larger fonts */
-    cursor: pointer; /* make it look clickable */
+    padding: 15px;
+    background: whitesmoke;
+    border: 2px solid black;
+    color: black;
+    border-radius: 20px;
+    font-weight: bold;
+    font-size: 52px;
+    cursor: pointer;
+}
 
-    /* background: rgb(235, 240, 235);
-    border: 2px solid rgb(32, 32, 32);
-    border-radius: 25%;
-    padding: 5%;
-    color: black; */
+.equal {
+    background: rgb(255, 195, 83);
+    color: whitesmoke;
+    font-size: 70px;
+    padding:0;
 }
