--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,23 @@ body {
 }
 
 .calculator {
-    max-width: 600px;
+    width: 600px;
     background-color: grey;
     margin: 0 auto;
     border: 2px solid black;
     border-radius: 25px;
 }
 
-.calculator input {
+#display {
+    height: 94px;
+    padding-right: 16px;
+    line-height: 94px;
+    margin: 20px 20px 0 20px;
+    font-size: 52px;
     background: rgb(193, 224, 175);
     border: 2px solid black;
-    width: 100%;
     border-radius: 25px;
-    padding: 20px;
     text-align: right;
-    font-size: 80px;
 }
 
 .calculator-buttons {
@@ -48,6 +50,10 @@ body {
     font-weight: bold;
     font-size: 52px;
     cursor: pointer;
+}
+
+.calculator-buttons :hover {
+    background-color:rgb(187, 187, 187);
 }
 
 .equal {
